<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/demoImage"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/demo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">
                <Button
                    android:id="@+id/buttonZoomIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/zoom_in"
                    tools:ignore="ButtonStyle"/>
                <Button
                    android:id="@+id/buttonZoomOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/zoom_out"
                    tools:ignore="ButtonStyle"/>
            </TableRow>
            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">
                <Button
                    android:id="@+id/buttonFadeIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/fade_in"
                    tools:ignore="ButtonStyle"/>
                <Button
                    android:id="@+id/buttonFadeOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/fade_out"
                    tools:ignore="ButtonStyle"/>
            </TableRow>
            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">
                <Button
                    android:id="@+id/buttonSlideLeft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/slide_left"
                    tools:ignore="ButtonStyle"/>
                <Button
                    android:id="@+id/buttonSlideRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/slide_right"
                    tools:ignore="ButtonStyle"/>
            </TableRow>
            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">
                <Button
                    android:id="@+id/buttonSlideUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="Slide Up"
                    tools:ignore="ButtonStyle"/>
                <Button
                    android:id="@+id/buttonslideDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/slide_down"
                    tools:ignore="ButtonStyle"/>
            </TableRow>
            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">
                <Button
                    android:id="@+id/buttonZoomInFadeIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/zoom_in_fade_in"
                    tools:ignore="ButtonStyle"/>
                <Button
                    android:id="@+id/buttonZoomOutFadeOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/zoom_out_fade_out"
                    tools:ignore="ButtonStyle"/>
            </TableRow>
            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">
                <Button
                    android:id="@+id/buttonRotate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/rotate"
                    tools:ignore="ButtonStyle"/>
                <Button
                    android:id="@+id/buttonMove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/move"
                    tools:ignore="ButtonStyle"/>
            </TableRow>
        </TableLayout>

    </ScrollView>

</LinearLayout>
